public interface Objectif {
    Army getWinner(Battle context);
}
