@startuml

class Battle {
    - Battle()
    + void init(List<Army> armies)
    + void run()
    + void addGameObject(GameObject o)
    + void removeGameObject(GameObject o)
    + {static} Battle getInstance()
}

interface Objectif{
    + Army getWinner(Battle context)
}

class Army {}

abstract class GameObject{
    + void setReady()
    + {abstract}void init(Battle context)
    + {abstract}void update(Time deltaTime, Battle context)
    + {abstract}void end(Battle context)
    + void remove()
}

abstract class Entity{
    - int health
    + Stats getStats()
    + void recieveDamage(int health)
}

abstract class Unit {
    + Stats getStats()
    + Stats getRawStats()
    + void addBuff(Buff buff)
    # void getStatBuffVisitor()
    # void getUpdateBuffVisitor(float deltaTime)
}

class Stats {
    void addStat(Statistic stat, double value)
    double getStatisticValue(Statistic stat)
    bool containStat(Statistic stat)
}

interface AI {
    + Action getAction(Unit unit, Battle context)
}

class Vector2{
    - float x
    - float y
    + Vector2 add(Vector2 other)
    + Vector2 sub(Vector2 other)
    + Vector2 inc(Vector2 other)
    + Vector2 dec(Vector2 other)
    + Vector2 scale(float x)
    + float distance()
    + float sqrDistance()
}

interface Action{
    + void execute()
}

interface Buff{
    + void accept(BuffVisitor visitor)
}

interface BuffVisitor<T extends Buff>{
    + void visit(T visitor)
}

interface AttackAction{
    +setTarget(Unit target)
}

interface MoveAction{
    +setTarget(Vector2 target)
}

class TickBuffVisitor{
    # float deltaTime
    + void visit(T visitor)
}

class StatsBuffVisitor{
    + void visit(T visitor)
    + Stats getStats()
}

enum EntityPrimitiveType{
    
}

interface EntityCreator{
    void createEntity(Stats stats)
}


class EntityFactory{
    + void createEntity(String type)
    + void setEntityType(String type, PrimitiveEntityType entityType, Stats stats)
}

Battle "1" o--> "0..n teams" Army
Battle "1" o--> "0..n objects" GameObject
Battle "1" x--> "1 objectif" Objectif
Unit "1" x--> "1 ai" AI
Unit "1" x--> "0..n buffs" Buff
Entity "1" x--> "1 postion" Vector2
Entity "1" x--> "1 stats" Stats
Battle "1" --> "1 instance "Battle


Army "1 team" o--- "0..n units" Unit
EntityFactory  o--- "0..n primitive" EntityPrimitiveType
EntityPrimitiveType  o--- "0..n creator" EntityCreator
EntityFactory  o--- "0..n stats" Stats

AI ..> Action : "<<uses>>"
Action --|> MoveAction
Action --|> AttackAction
Unit ..> TickBuffVisitor : "<<uses>>"
Unit ..> StatsBuffVisitor : "<<uses>>"
BuffVisitor <..> Buff : "<<uses>>"
StatsBuffVisitor o--> "1 computedStats" Stats

Entity ..|> GameObject
StatsBuffVisitor ..|> BuffVisitor
UpdateBuffVisitor ..|> BuffVisitor
Unit --|> Entity
Battle --> PropertyChangeSupport

@enduml